[package]
name = "boi-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["rustls", "ws"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
anyhow = "1"
chrono = "0.4"
colored = "2"
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2"
hex = "0.4"